@@ -1,5 +1,11 @@
 2008-10-07  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/youtube/youtube.py: Patch from Gilles Dartiguelongue
+	<gilles.dartiguelongue@esiee.org> to update the intltool
+	requirements (Closes: #555283)
+
+2008-10-07  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plugins/totem-python-module.c
 	(totem_python_module_init_python), (totem_python_module_load):
 	* src/plugins/totem-python-plugin.c (call_python_method),
